Z-index effect fixed

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   height: 100vh;
   left: 0;
   top: 0;
-  z-index: 9999;
+  z-index: 99;
 }
 .link-div > div {
   width: 80vw;
@@ -91,6 +91,7 @@ header {
   top: 0;
   left: 0;
   box-shadow: 1px 2px 8px 2px rgba(0, 0, 0, 0.1);
+  z-index: 999;
 }
 
 table {
